--- a/.github/workflows/main.backend.yml
+++ b/.github/workflows/main.backend.yml
@@ -1,11 +1,11 @@
 name: Gradle Build
 
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # Triggers the workflow on push or pull request events but only for the "main" or "dev" branch
   push:
-    branches: [ "main" ]
+    branches: [ "main","dev" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main","dev" ]
 
 jobs:
   build:
@@ -29,10 +29,11 @@ jobs:
           cache: gradle
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-        working-directory: UniTrade
+      #- name: Grant execute permission for gradlew
+       # run: chmod +x gradlew
+       # working-directory: UniTrade
         # Run build
       - name: Build with Gradle
-        run: ./gradlew build
-        working-directory: UniTrade
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: build
