--- a/.github/workflows/main.backend.yml
+++ b/.github/workflows/main.backend.yml
@@ -1,15 +1,20 @@
 name: Gradle Build
-
 on:
   # Triggers the workflow on push or pull request events but only for the "main" or "dev" branch
   push:
     branches: [ "main","dev" ]
   pull_request:
     branches: [ "main","dev" ]
-
+    
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    # Tell it to run in the unitrade-backend folder
+    defaults: 
+      run:
+        working-directory: unitrade-backend
+        
     steps:
        # setup Postgres DB
       - name: Set up PostgreSQL database
