--- a/.github/workflows/main.backend.yml
+++ b/.github/workflows/main.backend.yml
@@ -41,4 +41,5 @@ jobs:
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: build
+          gradle-executable: unitrade-backend/gradlew
           working-directory: unitrade-backend
