--- a/.github/workflows/main.backend.yml
+++ b/.github/workflows/main.backend.yml
@@ -32,11 +32,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
-      #- name: Validate Gradle wrapper
-      #  uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      #- name: Grant execute permission for gradlew
-       # run: chmod +x gradlew
-       # working-directory: UniTrade
-        # Run build
+      # Run build
       - name: Build with Gradle
         run: ./gradlew build
+      # Run test
+      - name: Run Backend Tests
+        run: ./gradlew test 
