Added test logging in the build.gradle whenever ./gradlew test is called

--- a/unitrade-backend/build.gradle
+++ b/unitrade-backend/build.gradle
@@ -24,3 +24,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+test {
+	testLogging {
+		events "passed", "skipped", "failed"
+	}
+}
