#35 Set up Cucumber

--- a/unitrade-backend/build.gradle
+++ b/unitrade-backend/build.gradle
@@ -19,6 +19,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mockito:mockito-core:4.8.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
+	testImplementation 'io.cucumber:cucumber-java:7.11.1'
+	testImplementation 'io.cucumber:cucumber-junit:7.11.1'
+	testImplementation 'io.cucumber:cucumber-spring:7.11.1'
+	testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.2'
 }
 
 tasks.named('test') {
