--- a/unitrade-frontend/package.json
+++ b/unitrade-frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
@@ -14,12 +15,14 @@
     "react-bootstrap": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "vitest": "^0.28.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "jest-cucumber": "^3.0.1",
     "vite": "^4.1.0"
   }
 }
