--- a/unitrade-backend/build.gradle
+++ b/unitrade-backend/build.gradle
@@ -13,12 +13,27 @@ repositories {
 }
 
 dependencies {
+	// For Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// For PostgreSQL
 	runtimeOnly 'org.postgresql:postgresql'
+	
+	// For JUnit
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// For Mockito
 	testImplementation 'org.mockito:mockito-core:4.8.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
+
+	// For Swagger UI
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
+
+	// For Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
