Removed gradle test and added frontend build and test
Gradle build already runs the tests; And added frontend build and tests

--- a/.github/workflows/main.backend.yml
+++ b/.github/workflows/main.backend.yml
@@ -10,6 +10,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
+    # Setup Node
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x, 18.x]
+    
     # Tell it to run in the unitrade-backend folder, but does not work for external actions 
     # only for running our own scripts
     defaults: 
@@ -32,9 +37,16 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
-      # Run build
+      # Run build which runs the tests as well
       - name: Build with Gradle
         run: ./gradlew build
-      # Run test
-      - name: Run Backend Tests
-        run: ./gradlew test 
+      # Frontend build and test
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - run: npm ci # Continuous Integration / Clean Install
+      - run: npm run build
+      - run: npm run test
