#68 #52 Work on rest controller

--- a/unitrade-backend/build.gradle
+++ b/unitrade-backend/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
 
 	// For Spring Security
-	// implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	// implementation 'org.springframework.security:spring-security-test'
 
   // For Cucumber
