Commented out Java Test now that the frontend test is running

--- a/.github/workflows/main.backend.yml
+++ b/.github/workflows/main.backend.yml
@@ -38,8 +38,8 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       # Run build which runs the tests as well
-      #- name: Build with Gradle
-      # run: ./gradlew build
+      - name: Build with Gradle
+        run: ./gradlew build
       # Frontend build and test
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
