#68 #55 Implement API endpoints for University and Person

--- a/unitrade-backend/src/main/resources/application.properties
+++ b/unitrade-backend/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/unitrade-db
 spring.datasource.username=postgres
 spring.datasource.password=admin
+
+spring.security.user.name=a
+spring.security.user.password=a
