#40 Fixed default auth behavior bug

--- a/unitrade-backend/src/main/resources/application.properties
+++ b/unitrade-backend/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/unitrade-db
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
-# spring.security.user.name=a
-# spring.security.user.password=a
+spring.security.user.name=a
+spring.security.user.password=a
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
