--- a/unitrade-backend/src/main/resources/application.properties
+++ b/unitrade-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = ${PORT:8080}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/unitrade-db
 spring.datasource.username=postgres
