--- a/unitrade-frontend/package.json
+++ b/unitrade-frontend/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "jest-cucumber": "^3.0.1",
+    "react-test-renderer": "^18.2.0",
     "vite": "^4.1.0"
   }
 }
