--- a/unitrade-frontend/package.json
+++ b/unitrade-frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
+    "react-select": "^5.7.0",
     "styled-components": "^5.3.6",
     "vitest": "^0.28.5"
   },
