Add the use default host

--- a/unitrade-backend/src/main/resources/application.properties
+++ b/unitrade-backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.liberty.use-default-host = false
 server.address = 'localhost'
 server.port = ${PORT:8080}
 allowed.origins=http://localhost:5173
