--- a/unitrade-frontend/package.json
+++ b/unitrade-frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "../unitrade-backend/gradlew -p ../unitrade-backend bootRun & vitest"
+    "test": "../unitrade-backend/gradlew -p ../unitrade-backend bootRun & (sleep 5 && vitest)"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
@@ -23,6 +23,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "happy-dom": "^8.9.0",
     "jest-cucumber": "^3.0.1",
     "react-test-renderer": "^18.2.0",
     "vite": "^4.1.0"
