--- a/unitrade-frontend/package.json
+++ b/unitrade-frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "../unitrade-backend/gradlew -p ../unitrade-backend bootRun & (sleep 5 && vitest)"
+    "test": "vitest"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
