Added login/logout and session persistence

--- a/unitrade-backend/src/main/resources/application.properties
+++ b/unitrade-backend/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.password=admin
 spring.security.user.name=a
 spring.security.user.password=a
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+server.servlet.session.timeout= 120s
