--- a/unitrade-backend/src/main/resources/application.properties
+++ b/unitrade-backend/src/main/resources/application.properties
@@ -3,6 +3,7 @@ allowed.origins=http://localhost:5173
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/unitrade-db
 spring.datasource.username=postgres
